# alfred-margaret

./: .envrc  .gitignore  .stylish-haskell.yaml  CHANGELOG.md  LICENSE  README.md  alfred-margaret.cabal  benchmark.sh  cabal.project  default.nix  stack-shell.nix  stack.yaml
.semaphore/: install-nix.sha256  push-to-cachix.sh  semaphore.yml
app/dump-automaton/: Main.hs
app/uvector-vs-tba/: Main.hs
bench/: Main.hs
bench/bm/: Main.hs
bench/uvector-vs-tba/: Main.hs
benchmark/: .gitignore  README.md  benchmark.py  default.nix  naive.py  report.py  report_aho.py
benchmark/data/: example.txt
benchmark/data-utf8/: example.txt
benchmark/haskell/: ac-bench.cabal  package.yaml
benchmark/haskell-utf8/: package.yaml  stack.yaml
benchmark/haskell-utf8/app/: Main.hs
benchmark/haskell/app/: Main.hs
benchmark/java/: BUILD  WORKSPACE  main.java
benchmark/rust/: Cargo.toml
benchmark/rust-ffi/: package.yaml  stack.yaml
benchmark/rust-ffi/app/: Main.hs
benchmark/rust-ffi/libacbench/: Cargo.toml
benchmark/rust-ffi/libacbench/src/: lib.rs
benchmark/rust/src/: main.rs
nix/: ghc-overlay.nix  ghc902-overlay.nix  ghc910-overlay.nix  ghc914-overlay.nix  ghc966-overlay.nix  haskell-dependencies.nix  haskell-overlay.nix  locale.nix  nixpkgs-pinned.nix  sources.json
src/Data/: TypedByteArray.hs
src/Data/Primitive/: Extended.hs
src/Data/Text/: AhoCorasick.hs  CaseSensitivity.hs  Utf16.hs  Utf8.hs
src/Data/Text/AhoCorasick/: Automaton.hs  Replacer.hs  Searcher.hs  Splitter.hs
src/Data/Text/BoyerMoore/: Automaton.hs  Replacer.hs  Searcher.hs
src/Data/Text/BoyerMooreCI/: Automaton.hs  Replacer.hs  Searcher.hs
src/Data/Text/Utf8/: Unlower.hs
src/Data/Text/Utf8/AhoCorasick/: Automaton.hs  Replacer.hs  Searcher.hs  Splitter.hs
src/Data/Text/Utf8/BoyerMoore/: Automaton.hs  Replacer.hs  Searcher.hs
tests/: AhoCorasickSpec.hs  Main.hs
tests/Data/Text/: AhoCorasickSpec.hs  BoyerMooreCISpec.hs  BoyerMooreSpec.hs  Orphans.hs  TestInstances.hs  Utf8Spec.hs
tests/Data/Text/Utf8/: AhoCorasickSpec.hs  BoyerMooreSpec.hs  Utf8Spec.hs
