name:                alfred-margaret
version:             1.1.1.0
synopsis:            Fast Aho-Corasick string searching
description:         An efficient implementation of the Aho-Corasick
                     string searching algorithm.
homepage:            https://github.com/channable/alfred-margaret
license:             BSD3
license-file:        LICENSE
author:              The Alfred-Margaret authors
maintainer:          Ruud van Asseldonk <ruud@channable.com>, Fabian Thorand <fabian@channable.com>
copyright:           2020 Channable
category:            Data, Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:
                     -- Stackage LTS 13.10.
                     GHC == 8.6.3
                     -- Stackage LTS 16.18.
                   , GHC == 8.8.4

source-repository head
  type:     git
  location: https://github.com/channable/alfred-margaret

Flag aeson
    Description: Enable aeson support
    Manual: False
    Default: True

-- Compile this package with LLVM, rather than with the default code generator.
-- LLVM produces about 20% faster code.
Flag llvm
  Description: Compile with LLVM
  Manual: True
  -- Defaulting to false makes the package buildable by Hackage,
  -- allowing the documentation to be generated for us.
  Default: False

library
  hs-source-dirs:      src
  exposed-modules:     Data.Text.AhoCorasick.Automaton
                     , Data.Text.AhoCorasick.Replacer
                     , Data.Text.AhoCorasick.Searcher
                     , Data.Text.AhoCorasick.Splitter
                     , Data.Text.BoyerMoore.Automaton
                     , Data.Text.BoyerMoore.Replacer
                     , Data.Text.BoyerMoore.Searcher
                     , Data.Text.Utf16
  build-depends:
      base             >= 4.7 && < 5
    , containers       >= 0.6 && < 0.7
    , deepseq          >= 1.4 && < 1.5
    , hashable         >= 1.2.7 && < 1.4
    , primitive        >= 0.6.4 && < 0.8
    , text             >= 1.2.3 && < 1.3
    , unordered-containers >= 0.2.9 && < 0.3
    , vector           >= 0.12 && < 0.13
  ghc-options:         -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns -O2
  default-language:    Haskell2010
  if flag(aeson) {
  build-depends:       aeson >= 1.4.2 && < 1.6
  cpp-options:         -DHAS_AESON
  }
  if flag(llvm) {
  ghc-options:         -fllvm -optlo=-O3 -optlo=-tailcallelim
  }

test-suite test-suite
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  other-modules:       Data.Text.AhoCorasickSpec
                     , Data.Text.BoyerMooreSpec
                     , Data.Text.Orphans
  hs-source-dirs:      tests
  ghc-options:         -Wall -Wincomplete-record-updates -Wno-orphans
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , alfred-margaret
                     , deepseq
                     , hspec
                     , hspec-expectations
                     , quickcheck-instances
                     , text
  default-language:    Haskell2010
